--- a/package.json
+++ b/package.json
@@ -2,5 +2,24 @@
   "name": "server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "start": "tsnd --no-notify --respawn --transpile-only --ignore-watch node_modules ./src/server.ts",
+    "knex:next": "knex --knexfile knexfile.ts migrate:latest",
+    "knex:back": "knex --knexfile knexfile.ts migrate:rollback"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.7",
+    "@types/express": "^4.17.7",
+    "ts-node-dev": "^1.0.0-pre.56",
+    "typescript": "^3.9.7"
+  },
+  "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
+    "cors": "^2.8.5",
+    "expo": "^38.0.9",
+    "express": "^4.17.1",
+    "knex": "^0.21.4",
+    "sqlite3": "^5.0.0"
+  }
 }
